# dotfiles

./: .gitignore  README.md
alacritty/.config/alacritty/: alacritty.toml
fish/.config/fish/: config.fish  fish_variables
fish/.config/fish/functions/: new_tmux.fish
ghostty/.config/ghostty/: config
kitty/.config/kitty/: kitty.conf
linux-nvim/.config/nvim/: lazy-lock.json  lazyvim.json
linux-nvim/.config/nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  left_padding.lua  options.lua
linux-nvim/.config/nvim/lua/plugins/: 99.lua  all-themes.lua  codesnap.lua  colortheme.lua  conform.lua  dash.lua  diffview.lua  dooing.lua  explorer.lua  hard-time.lua  lsp.lua  mason.lua  mini-files.lua  no-neck-pain.lua  noice.lua  omarchy-theme-hotreload.lua  snacks.lua  stay-centered.lua  telescope.lua  theme.lua  treesitter.lua  trouble.lua  yazi.lua
python/: pyproject.toml  pyrightconfig.json  ruff.toml
starship/.config/: starship.toml
tmux/: .tmux.conf
waybar/.config/waybar/: config.jsonc  style.css
yazi/.config/: package.toml
yazi/.config/yazi/: package.toml  yazi.toml
zshrc/: .zshrc
